cmake_minimum_required(VERSION 3.11)
project(ros_data_types_for_cyclonedds LANGUAGES CXX VERSION 1.0.0)

add_compile_options(-Wno-narrowing)

add_subdirectory(builtin_interfaces)
add_subdirectory(std_msgs)
add_subdirectory(diagnostic_msgs)
add_subdirectory(geometry_msgs)
add_subdirectory(trajectory_msgs)
add_subdirectory(gazebo_msgs)
add_subdirectory(lifecycle_msgs)
add_subdirectory(nav_msgs)
add_subdirectory(sensor_msgs)
add_subdirectory(pendulum_msgs)
add_subdirectory(shape_msgs)
add_subdirectory(stereo_msgs)
add_subdirectory(test_msgs)
add_subdirectory(tf2_msgs)
add_subdirectory(visualization_msgs)
add_subdirectory(rcl_interfaces)
