cmake_minimum_required(VERSION 3.11)
project(ros_data_types_for_cyclonedds LANGUAGES CXX VERSION 1.0.0)

if(POLICY CMP0167)
  cmake_policy(SET CMP0167 NEW)
  set(CMAKE_POLICY_DEFAULT_CMP0167 NEW)
endif()

find_package(Python3 REQUIRED COMPONENTS Interpreter)
find_program(IDLC_EXECUTABLE idlc REQUIRED)

if(APPLE)
  set(ICEORYX_PREFIX "$ENV{ICEORYX_PREFIX}" CACHE PATH "iceoryx install prefix")
  if(NOT ICEORYX_PREFIX)
    set(ICEORYX_PREFIX "/opt/iceoryx" CACHE PATH "iceoryx install prefix" FORCE)
  endif()
  set(IDLC_REAL_EXECUTABLE "${IDLC_EXECUTABLE}")
  set(IDLC_WRAPPER "${CMAKE_BINARY_DIR}/bin/idlc-with-runtime-path")
  file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
  file(WRITE "${IDLC_WRAPPER}" "#!/usr/bin/env bash\n")
  file(APPEND "${IDLC_WRAPPER}" "export DYLD_LIBRARY_PATH=\"${ICEORYX_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/lib:${CMAKE_PREFIX_PATH}:$DYLD_LIBRARY_PATH\"\n")
  file(APPEND "${IDLC_WRAPPER}" "export LD_LIBRARY_PATH=\"${ICEORYX_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/lib:$LD_LIBRARY_PATH\"\n")
  file(APPEND "${IDLC_WRAPPER}" "exec \"${IDLC_REAL_EXECUTABLE}\" \"$@\"\n")
  file(CHMOD "${IDLC_WRAPPER}"
       PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
  set(IDLC_EXECUTABLE "${IDLC_WRAPPER}" CACHE FILEPATH "idlc wrapper with runtime library path" FORCE)
endif()

add_compile_options(-Wno-narrowing)

add_subdirectory(builtin_interfaces)
add_subdirectory(unique_identifier_msgs)
add_subdirectory(std_msgs)
add_subdirectory(std_srvs)
add_subdirectory(diagnostic_msgs)
add_subdirectory(action_msgs)
add_subdirectory(example_interfaces)
add_subdirectory(fixedsized_msgs)
add_subdirectory(geometry_msgs)
add_subdirectory(trajectory_msgs)
add_subdirectory(gazebo_msgs)
add_subdirectory(lifecycle_msgs)
add_subdirectory(nav_msgs)
add_subdirectory(sensor_msgs)
add_subdirectory(pendulum_msgs)
add_subdirectory(lwrclpy_bench)
add_subdirectory(shape_msgs)
add_subdirectory(stereo_msgs)
add_subdirectory(test_msgs)
add_subdirectory(tf2_msgs)
add_subdirectory(visualization_msgs)
add_subdirectory(rcl_interfaces)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/rosidl_runtime_cpp DESTINATION include/)
